Fix comment borders in Firefox, improve spacing for recent articles, remove some redundant stylesheet rules
git-svn-id: https://tarski.googlecode.com/svn/trunk@555 8ec1c81d-c82d-0410-ab24-9d07384f4a97

--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ body.rtl #navigation ul.primary { direction: ltr; }
 			#trackback-link .secondary p { font-weight: bold; margin: 0; padding: 5px 24px 5px 0; }
 			#trackback-link .primary p { margin: 0; padding: 5px 0; }
 
-	body .comment { margin: 0; border-top: 1px solid #ccc; padding: 0.5em 0; }
+	body .comment { margin: 0; border-top: 1px solid #ccc; padding: 0.65em 0; }
 		body .comment-permalink, body .comment-edit { font-size: 0.8em; margin: 0; }
 		body .comment-author { margin: 0 0 0.5em 0; font-weight: bold; }
 		body .avatar { margin: 0; }
@@ -219,10 +219,8 @@ body.rtl #navigation ul.primary { direction: ltr; }
 			#recent ul { list-style: none; margin: 0; }
 				#recent li { margin: 0; }
 				h4.recent-title { margin: 0; }
-				p.recent-metadata { font-size: 0.8em; color: #808080; margin: 0; }
-				p.recent-excerpt { line-height: 1.4; margin: 0 0 1em 0; }
-		#blurb {}
-			.edit-link { clear: both; margin: 0 0 1em 0; text-align: right; font-size: 0.8em; color: #808080; }
+				.recent-metadata { font-size: 0.8em; color: #808080; margin: 0; }
+				.recent-excerpt { line-height: 1.4; margin: 0 0 1em 0; }
 		#theme-info { margin: 0.5em 0 0 0; border-top: 3px double #ccc; padding: 1em 0 0.5em 0; color: #808080; }
 			
 /* Forms
